--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
     <link rel="stylesheet" href="styles/architec.css">
 </head>
 <body>
-    
+      <header>
+        <nav>
+            <h1 class="nav-tittle">G3 Architec</h1>
+            <ul class="bar">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+          </nav>
+          <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-tittle">Brand New Group of Architect</h1>
+                <p class="banner-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci quasi vero nemo eum neque aut omnis praesentium tenetur velit at suscipit, odio sapiente consectetur maiores itaque, natus culpa voluptatum sint!
+                </p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="">
+          </div>
+      </header>     
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
