--- a/index.html
+++ b/index.html
@@ -27,9 +27,23 @@
             </div>
             <img src="images/banner.png" alt="">
           </div>
-      </header>     
-    <main>
+      </header>  
 
+    <main>
+         <section class="feature">
+            <div class="img-feature">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="content-feature">
+                <h1 class="feature-tittle"><span class="pample">Quick List</span> of Your <br> <span class="orange">Features</span> </h1>
+                <p class="feature-description">Lorem ipsum, dolor sit amet consectetur adipisicing <br> Reprehenderit ipsam voluptate illum perferendis minus iste, <br> numquam aperiam dolore ea?</p>
+                <button class="btn-primary">Explore More</button>
+                  
+            </div>
+         </section>
     </main>
     <footer>
 
